# bot

./: .dockerignore  .envkey  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
prisma/: schema.prisma
src/: __init__.py  __main__.py  bot.py  env.py  errors.py  logger.py  utils.py
src/ext/: __init__.py  general.py  logging.py  moderation.py  pagination.py
