[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["miki55555115 <miki55555115@gmail.com>","pawelek3113 <pawel.kamil.komendera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nextcord = "^2.6.0"
aiohttp = "^3.9.0"
prisma = "^0.11.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pre-commit = "^3.5.0"
ruff = "^0.2.1"
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 6
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
order_by_type = false
case_sensitive = true
combine_as_imports = true
line_length = 120
atomic = true
src_paths = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 120
